--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "framer-motion": "^11.5.6",
     "next": "14.2.9",
     "react": "^18",
+    "react-animated-numbers": "^0.18.0",
     "react-dom": "^18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
